# Mathematical-collapse-prevention-model

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
business_audit/: business_resilience_framework.py
dependency_audit/: refinery_dependency_graph.py
docs/: TRUTH_TELLING.md
examples/: community_year.csv  run_community_year.py
premise_audit/: premise_cross_domain_audit.py  validity_weighted_reweighting.py
src/: __init__.py
src/core/: __init__.py  coherence_metric.py  golden_ratio_trust.py
src/measurement/: __init__.py  coherence_verdict.py  empathy_types.py  replacement_analysis.py  sensitivity.py
substrate_audit/: substrate_aware_audit.py
tests/: test_coherence_metric.py  test_coherence_verdict.py  test_empathy_types.py  test_golden_ratio_trust.py  test_replacement_analysis.py  test_sensitivity.py
