[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpm"
version = "0.1.0"
description = "Mathematical Collapse-Prevention Model: a measurement framework for systemic coherence."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/JinnZ2/Mathematical-collapse-prevention-model"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
